[package]
name = "cellzone-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cellzone_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
http = "1"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "tokio-rustls", "rustls-tls-webpki-roots"] }
tungstenite = "0.24"
bytes = "1"
futures-util = "0.3"
